[package]
name = "gotham_examples_middleware_introduction"
description = "Introduces the Middleware and Pipeline concepts provided by the Gotham web framework"
version = "0.0.0"
publish = false

[dependencies]
gotham = { git = "https://github.com/gotham-rs/gotham.git" }
gotham_derive = { git ="https://github.com/gotham-rs/gotham.git" }

hyper = "0.11"
futures = "0.1"
mime = "0.3"
